Fixed layout issue on Splash screen with the enter button

--- a/src/components/Splash/Splash.css
+++ b/src/components/Splash/Splash.css
@@ -77,6 +77,9 @@
   color: white;
   width: 100%;
   height: 50vh;
+}
+
+.login-register {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
